feat: add active/deactive actions on currency
