# app/Http/Controllers/CurrencyController.php
@@ -39,4 +39,36 @@ class CurrencyController extends Controller implements CurrencyControllerInterfa
                 ->send(201);
         }
     }
+
+    /**
+     * Active a resource in storage.
+     */
+    public function active(Currency $currency)
+    {
+        if ($currency->is_active) {
+            throw new BadRequestException(__('currency.errors.currency_was_active'));
+        }
+
+        $currency->update(['is_active' => 1]);
+
+        return ApiResponse::data(new CurrencyResource($currency))
+            ->message(__('currency.messages.activated_successfull'))
+            ->send(201);
+    }
+
+    /**
+     * Deactive a resource in storage.
+     */
+    public function deactive(Currency $currency)
+    {
+        if (!$currency->is_active) {
+            throw new BadRequestException(__('currency.errors.currency_was_not_active'));
+        }
+
+        $currency->update(['is_active' => 0]);
+
+        return ApiResponse::data(new CurrencyResource($currency))
+            ->message(__('currency.messages.deactivated_successfull'))
+            ->send(201);
+    }
 }
